DON-1114: Fix wrong colour icon for small charity week in footer

--- a/src/components/biggive-footer/biggive-footer.scss
+++ b/src/components/biggive-footer/biggive-footer.scss
@@ -78,7 +78,7 @@ nav ul li a {
   }
 
   &.icon-small-charity {
-    background-image: url(/assets/images/triangles-combined-arts-white.svg);
+    background-image: url(/assets/images/triangles-combined-small-charity-week-white.svg);
   }
 }
 
